<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Doctor_Popup">

    <include
        android:id="@+id/include2"
        layout="@layout/back_tool_bar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/client_profile_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/doctor_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <TextView
        android:id="@+id/doctor_popup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/doctor_popup_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/client_profile_view"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <TextView
        android:id="@+id/doctor_popup_specialization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/doctor_popup_specialization"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/client_profile_view"
        app:layout_constraintTop_toBottomOf="@+id/doctor_popup_name" />

    <TextView
        android:id="@+id/doctor_popup_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/doctor_popup_location"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/doctor_popup_specialization" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/client_profile_view"
        app:layout_constraintTop_toBottomOf="@+id/doctor_popup_specialization"
        app:srcCompat="@drawable/location_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/doctor_popup_contact_number"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/doctor_popup_contact_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/doctor_popup_contact_number"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/board_shape"
        android:hint="@string/doctor_popup_hint_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_profile_view" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/doctor_popup_email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/doctor_popup_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/doctor_popup_email"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/board_shape"
        android:hint="@string/doctor_popup_hint_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_popup_contact_number" />

    <TextView
        android:id="@+id/client_profile_pet_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/doctor_popup_biography"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor_popup_email" />

    <TextView
        android:id="@+id/doctor_popup_about"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/board_shape"
        android:text="@string/doctor_popup_about"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/client_profile_pet_type" />

    <Button
        android:id="@+id/doctor_popup_btn_2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/background"
        android:text="@string/doctor_popup_btn_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/doctor_popup_btn_1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/background"
        android:text="@string/doctor_popup_btn_1"
        app:layout_constraintBottom_toTopOf="@+id/doctor_popup_btn_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>