<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/display_doctor_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/doctor_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/display_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/display_doctor_icon"
            android:text="@string/home_doctor_name"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/display_doctor_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/display_doctor_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_doctor_specialist"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/imageView5"
            android:text="@string/home_location"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/display_doctor_specialist" />

        <TextView
            android:id="@+id/display_doctor_specialist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_doctor_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/display_doctor_icon"
            android:text="@string/home_specialization"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/display_doctor_icon"
            app:layout_constraintTop_toBottomOf="@+id/display_doctor_name" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@+id/display_doctor_specialist"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/display_doctor_icon"
            app:layout_constraintStart_toEndOf="@+id/display_doctor_icon"
            app:layout_constraintTop_toBottomOf="@+id/display_doctor_specialist"
            app:srcCompat="@drawable/location_icon" />

        <TextView
            android:id="@+id/display_doctor_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:text="@string/home_status"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/display_doctor_location"
            app:layout_constraintEnd_toEndOf="parent" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>