<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/display_clinic_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/clinic_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/display_clinic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/display_clinic_icon"
            android:text="@string/clinic_list_name"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/display_clinic_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/display_clinic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_clinic_name"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/display_clinic_icon"
            android:text="@string/clinic_list_location"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/display_clinic_icon" />

        <TextView
            android:id="@+id/display_clinic_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_clinic_location"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/display_clinic_icon"
            android:text="@string/create_clinic_contact_number"
            android:textSize="12sp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>